<resources>
    <string name="app_name">Расходы</string>
    <string name="title_home">Главная</string>
    <string name="title_add_action">Бюджет</string>
    <string name="title_more">Меню</string>
    <string name="income">Доход</string>
    <string name="expense">Расход</string>
    <string name="category">Категория</string>
    <string name="choose_category">Выберите категорию</string>
    <string name="sum">Сумма</string>
    <string name="date">Дата</string>
    <string name="today">Сегодня</string>
    <string name="add">Добавить</string>
    <string name="latest_expenses">Последние расходы</string>
    <string name="latest_incomes">Последние доходы</string>
    <string name="show_all">Показать все</string>
    <string name="currency_postfix">₽</string>
    <string name="expense_list">Список расходов</string>
    <string name="income_list">Список доходов</string>
    <string name="expenses_in_month">Расходы за %s</string>
    <string name="incomes_in_month">Доходы за %s</string>
    <string name="loading_dots">Загрузка…</string>
    <string name="no_pie_data">Нет данных для отображения</string>
    <string name="no_actions_data">Нет данных для отображения</string>
    <string name="comment">Комментарий</string>
    <string name="comment_hint">Введите комментарий</string>
    <string name="settings">Настройки</string>
    <string name="detailed_info">Подробная информация</string>
    <string name="delete">Удалить</string>
    <string name="confirmation">Подтверждение</string>
    <string name="delete_confirmation">Вы действительно хотите удалить это?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
</resources>