<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="me.r1411.finances.ui.fragments.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_expenseListFragment"
            app:destination="@id/navigation_expense_list" />
        <action
            android:id="@+id/action_navigation_home_to_incomeListFragment"
            app:destination="@id/navigation_income_list" />
    </fragment>

    <fragment
        android:id="@+id/navigation_add_action"
        android:name="me.r1411.finances.ui.fragments.add_action.AddActionFragment"
        android:label="@string/title_add_action"
        tools:layout="@layout/fragment_add_action" />

    <fragment
        android:id="@+id/navigation_more"
        android:name="me.r1411.finances.ui.fragments.more.MoreFragment"
        android:label="@string/title_more"
        tools:layout="@layout/fragment_more" />

    <fragment
        android:id="@+id/navigation_expense_list"
        android:name="me.r1411.finances.ui.fragments.actions_list.ActionsListFragment"
        android:label="@string/expense_list"
        tools:layout="@layout/fragment_action_list">
        <argument
            android:name="actionType"
            app:argType="me.r1411.finances.objects.ActionType"
            android:defaultValue="EXPENSE" />
    </fragment>

    <fragment
        android:id="@+id/navigation_income_list"
        android:name="me.r1411.finances.ui.fragments.actions_list.ActionsListFragment"
        android:label="@string/income_list"
        tools:layout="@layout/fragment_action_list">
        <argument
            android:name="actionType"
            app:argType="me.r1411.finances.objects.ActionType"
            android:defaultValue="INCOME" />
    </fragment><action android:id="@+id/action_global_navigation_home" app:destination="@id/navigation_home"/>
</navigation>